--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ ul {
 	width: 17%;
 	margin: 0.2%;
 	padding: 0.8%;
+	padding-top: 2%;
 	display: inline-block;
 	vertical-align: top;
 	background-image: url(frost50.png);
